--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -20,30 +20,18 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  margin: 16px;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
+p {
+  font-size: 1.5em;
+  line-height: 1.4;
+  color: darkslategray;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -56,7 +44,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: darkslategray;
 }
 button:focus,
 button:focus-visible {
@@ -65,7 +53,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: darkslategray;
     background-color: #ffffff;
   }
   a:hover {
