--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -2,15 +2,13 @@
 
 .press-start-2p-regular {
   font-family: "Press Start 2P", system-ui;
-  font-weight: 500;
   font-style: normal;
+  font-weight: 500;
 }
 
 :root {
   font-family: "Press Start 2P";
   line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -23,10 +21,9 @@
   margin: 16px;
 }
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
 }
-
 p {
   font-size: 1.5em;
   line-height: 1.4;
@@ -35,13 +32,14 @@ p {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.8em 0.7em;
+  font-size: 1.4em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  font-size: 1.em;
 }
 button:hover {
   border-color: darkslategray;
@@ -62,4 +60,19 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.main-button{
+  margin-top: 25px;
+  gap: 10px;
+
+}
+
+.icon {
+  margin-left: 16px;
+}
+
+.hero-h1{
+  font-weight: 400;
 }
