--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -17,11 +17,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  margin: 16px;
 }
 h1 {
-  font-size: 2em;
+  font-size: 3em;
   line-height: 1.1;
 }
 p {
@@ -32,14 +30,14 @@ p {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.8em 0.7em;
-  font-size: 1.4em;
+  padding: 12px;
+  font-size: 24px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  font-size: 1.em;
+  width: 358px;
 }
 button:hover {
   border-color: darkslategray;
@@ -49,30 +47,51 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: darkslategray;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-
-.main-button{
+.main-button {
   margin-top: 25px;
   gap: 10px;
-
+  display: flex;
+  justify-content: center;
 }
 
 .icon {
   margin-left: 16px;
 }
 
-.hero-h1{
+.hero-h1 {
   font-weight: 400;
+}
+
+.carousel-card {
+  background-color: #1a1a1a;
+  width: 358px;
+  height: 400px;
+  border-radius: 8px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.carousel-card:hover{
+  border-color: darkslategray;
+}
+
+.card-content {
+  padding: 12px;
+}
+
+.card-content h2 {
+  margin-top: 0px;
+}
+
+.dropdown select {
+  background-color: #1a1a1a;
+  border: none;
+  border-radius: 8px;
+  padding: 12px;
+  font-size: 24px;
+  font-family: "Press Start 2P";
+  margin-bottom: 15px;
+  width: 358px;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
