--- a/project-juice-2.0/src/components/Logo/logo.css
+++ b/project-juice-2.0/src/components/Logo/logo.css
@@ -6,7 +6,7 @@
 }
 
 .logo-pj:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em darkslategray);
 }
 
 @keyframes logo-spin {
