--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -31,6 +31,23 @@ body {
   box-sizing: border-box;
   width: 100%;
 }
+
+/* ------------------------------------------------ */
+/* --- Transition --- */
+/* ------------------------------------------------ */
+
+/* Plik index.css lub podobny */
+
+.transition-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  /* Kolor przejścia */
+  background-color: black;
+}
+
 /* ------------------------------------------------ */
 /* --- NotFoundPage --- */
 /* ------------------------------------------------ */
