--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -5,7 +5,6 @@
 .carousel-wrapper {
   position: relative;
   overflow-x: clip;
-  /* Połączone reguły z obu Twoich definicji */
   padding-left: 16px;
   margin-bottom: 16px;
   margin-top: 16px;
@@ -35,6 +34,7 @@
 
 .carousel-nav-mobile button:hover {
   border-color: darkslategray;
+  color: darkslategray;
 }
 
 .carousel-btn.desktop {
@@ -57,6 +57,7 @@
 
 .carousel-btn.desktop:hover {
   border-color: darkslategray;
+  color: darkslategray;
 }
 
 .carousel-btn.desktop.prev {
@@ -200,4 +201,46 @@
   .carousel-card:last-child {
     margin-right: 104px;
   }
+}
+
+/* --- Hover + Click --- */
+
+.carousel-card {
+  position: relative; 
+  overflow: hidden;
+}
+
+.ukryta-tresc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1a1a1abb; 
+  padding: 12px;
+  box-sizing: border-box;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  
+  z-index: 10;
+}
+
+.ukryta-tresc p{
+  color: white;
+}
+
+
+
+/* --- LOGIKA POKAZYWANIA --- */
+
+/* 5.A. Pokazywanie przez React (dla Mobile onClick) */
+/* Tę klasę dodaje React, gdy isFlipped=true */
+.carousel-card.pokaz-tresc .ukryta-tresc {
+  opacity: 1;
 }
