taste - hero container h1 fix

--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -375,6 +375,9 @@ button:focus-visible {
   .hero-h1 {
     display: flex;
   }
+  .hero-container h1{
+    margin: 0px;
+  }
 
   button,
   .dropdown select {
