--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -109,20 +109,18 @@ body {
   filter: drop-shadow(0 0 4em darkslategray);
 }
 
-
 .arc-text {
   fill: #e2e1e1;
   font-size: 32px;
   letter-spacing: 1px;
 }
 
-
 .description-container p {
   display: flex;
   text-align: center;
 }
 
-.home-h1-container{
+.home-h1-container {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -130,7 +128,6 @@ body {
 .home-h1-container h1 {
   margin: 10px 0px 0px 0px;
   font-size: 2em;
-  
 }
 
 .home-h1-1 {
@@ -273,6 +270,14 @@ body {
 /* --- Taste page --- */
 /* ------------------------------------------------ */
 
+ .taste-hero {
+    padding-top: 30px;
+  }
+
+.hero-container h1 {
+  margin-top: 15px;
+}
+
 .taste-image-container {
   display: flex;
   justify-content: center;
@@ -292,6 +297,18 @@ body {
 .taste-content {
   display: flex;
   flex-direction: column;
+}
+
+.taste-hero-1 {
+  color: rgb(88, 85, 128);
+}
+
+.taste-hero-2 {
+  color: rgb(100, 5, 119);
+}
+
+.taste-hero-3 {
+  color: rgb(128, 65, 65);
 }
 /* ------------------------------------------------ */
 /* --- Style Domyślne (Mobile-First) --- */
@@ -410,11 +427,11 @@ button:focus-visible {
     font-size: 32px;
     letter-spacing: 1px;
   }
- .home-h1-container{
-  display: flex;
-  text-align: center;
-  font-size: 20px;
- }
+  .home-h1-container {
+    display: flex;
+    text-align: center;
+    font-size: 20px;
+  }
 }
 
 /* ------------------------------------------------ */
@@ -422,7 +439,6 @@ button:focus-visible {
 /* ------------------------------------------------ */
 
 @media (min-width: 1024px) {
-
   button,
   .dropdown select {
     width: 350px;
@@ -443,8 +459,12 @@ button:focus-visible {
   .taste-content {
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 80vh;
     justify-content: center;
+  }
+
+  .hero-container h1 {
+    margin-top: 0px;
   }
 
   .content-wrapper-left {
@@ -469,7 +489,10 @@ button:focus-visible {
 
   .taste-hero {
     display: flex;
+    padding-top: 0px;
   }
+
+  
 }
 
 /* ------------------------------------------------ */
