--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -59,19 +59,20 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .pnf-header {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   justify-items: center;
+  text-align: center;
 }
 
-.pnf-header h1 {
-  font-size: 20px;
-  margin-top: 20px;
+.pnf-h1 {
+  margin: 10px 0px 0px 0px;
 }
 
 .pnf-button {
@@ -106,7 +107,6 @@ body {
   max-width: 400px;
   height: auto;
   margin-bottom: -1rem;
-  filter: drop-shadow(0 0 4em darkslategray);
 }
 
 .arc-text {
@@ -182,6 +182,10 @@ body {
   height: 40px;
   font-size: 1em;
   width: 160px;
+}
+
+.nav-button-1 {
+  color: #1a1a1a;
 }
 .mobile-menu-header h1 {
   font-size: 1.5em;
@@ -270,28 +274,21 @@ body {
 /* --- Taste page --- */
 /* ------------------------------------------------ */
 
- .taste-hero {
-    padding-top: 30px;
-  }
+.taste-hero-last {
+  padding-bottom: 15px;
+}
+.taste-hero {
+  padding-top: 30px;
+}
 
 .hero-container h1 {
   margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .taste-image-container {
   display: flex;
   justify-content: center;
-}
-
-.taste-image img {
-  width: 280px;
-  margin-top: -20px;
-  justify-content: center;
-}
-
-.taste-image img:hover {
-  filter: drop-shadow(0 0 2em darkslategray);
-  transition-duration: 400ms;
 }
 
 .taste-content {
@@ -300,19 +297,23 @@ body {
 }
 
 .taste-hero-1 {
-  color: rgb(88, 85, 128);
+  color: #585580;
 }
 
 .taste-hero-2 {
-  color: rgb(100, 5, 119);
+  color: #640577;
 }
 
 .taste-hero-3 {
-  color: rgb(128, 65, 65);
+  color: #804141;
 }
 /* ------------------------------------------------ */
 /* --- Style Domyślne (Mobile-First) --- */
 /* ------------------------------------------------ */
+
+.filter-drop {
+    filter: drop-shadow(0 0 2em rgb(33, 33, 33));
+}
 
 .randombtn-container button {
   height: 80px;
@@ -327,7 +328,6 @@ h1 {
 p {
   font-size: 0.9em;
   line-height: 1.4;
-  color: darkslategray;
 }
 
 button {
@@ -419,7 +419,6 @@ button:focus-visible {
     max-width: 600px;
     height: auto;
     margin-bottom: -1rem;
-    filter: drop-shadow(0 0 4em darkslategray);
   }
 
   .arc-text {
@@ -491,8 +490,6 @@ button:focus-visible {
     display: flex;
     padding-top: 0px;
   }
-
-  
 }
 
 /* ------------------------------------------------ */
