--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -33,8 +33,7 @@
 }
 
 .carousel-nav-mobile button:hover {
-  border-color: darkslategray;
-  color: darkslategray;
+  border: 2px solid white;
 }
 
 .carousel-btn.desktop {
@@ -56,8 +55,7 @@
 }
 
 .carousel-btn.desktop:hover {
-  border-color: darkslategray;
-  color: darkslategray;
+  border: 2px solid white;
 }
 
 .carousel-btn.desktop.prev {
@@ -104,6 +102,7 @@
   justify-content: center;
   align-items: center;
   padding: 12px;
+  transition: border-color 0.25s;
 }
 
 .carousel-card:last-child {
@@ -111,7 +110,7 @@
 }
 
 .carousel-card:hover {
-  border-color: darkslategray;
+  border: 2px solid white;
 }
 
 .card-content {
@@ -206,7 +205,7 @@
 /* --- Hover + Click --- */
 
 .carousel-card {
-  position: relative; 
+  position: relative;
   overflow: hidden;
 }
 
@@ -216,10 +215,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #1a1a1abb; 
+  background-color: #1a1a1abb;
   padding: 12px;
   box-sizing: border-box;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -227,15 +226,13 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.3s ease;
-  
+
   z-index: 10;
 }
 
-.ukryta-tresc p{
+.ukryta-tresc p {
   color: white;
 }
-
-
 
 /* --- LOGIKA POKAZYWANIA --- */
 
