--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -20,7 +20,7 @@
 
 .carousel-nav-mobile button {
   background-color: #1a1a1a;
-  border: 1px solid transparent;
+  border: 2px solid #1a1a1a;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -43,7 +43,7 @@
   transform: translateY(-50%);
   z-index: 2;
   background-color: #1a1a1a;
-  border: 1px solid transparent;
+  border: 2px solid #1a1a1a;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -93,7 +93,7 @@
   height: 400px;
   border-radius: 8px;
   cursor: pointer;
-  border: 1px solid transparent;
+  border: 2px solid #1a1a1a;
   flex-shrink: 0;
   scroll-snap-align: start;
   width: 350px;
