--- a/project-juice-2.0/src/components/Carousel/Carousel.css
+++ b/project-juice-2.0/src/components/Carousel/Carousel.css
@@ -19,8 +19,8 @@
 }
 
 .carousel-nav-mobile button {
-  background-color: #1a1a1a;
-  border: 2px solid #1a1a1a;
+  background-color: #111010;
+  border: 2px solid #111010;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -42,8 +42,8 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 2;
-  background-color: #1a1a1a;
-  border: 2px solid #1a1a1a;
+  background-color: #111010;
+  border: 2px solid #111010;
   border-radius: 50%;
   width: 50px;
   height: 50px;
