--- a/project-juice-2.0/src/index.css
+++ b/project-juice-2.0/src/index.css
@@ -90,6 +90,12 @@ body {
 /* --- PAGE // CONTACT --- */
 /* ------------------------------------------------ */
 
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .basic-tile-main {
   display: flex;
   flex-direction: column;
@@ -100,23 +106,45 @@ body {
 .contact-formulage {
   display: flex;
   flex-direction: column;
-  gap:15px;
+  gap: 15px;
   width: 300px;
 }
 
 .email-input {
   display: flex;
   flex-direction: column;
+  
 }
 
 .email-input p {
   margin: 0px;
   font-size: 0.8em;
+  
 }
 
-.contact-hero{
+.contact-hero {
+  padding-top: 24px;
   text-align: center;
   gap: 10px;
+}
+
+.contact-input {
+  border: 3px solid #111111;
+  border-radius: 4px;
+  height: 40px;
+  font-size: 1.2rem;
+  font-family: "Press Start 2P", system-ui;
+  padding: 0px 8px 0px 8px;
+  
+}
+
+.contact-input::placeholder{
+  color: #1111118e;
+}
+
+.contact-send{
+  font-size: 1em;
+  width: 300px;
 }
 /* ------------------------------------------------ */
 /* --- Home - Left/Right --- */
